// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly Blue button renders correctly 1`] = `
<button
  aria-label="Watch Now"
  className="btn blueBtn"
  onClick={[Function]}
  type="button"
>
  Watch Now
</button>
`;

exports[`Button component renders correctly Transparent button renders correctly 1`] = `
<button
  aria-label="View Info"
  className="btn transparentBtn"
  onClick={[Function]}
  type="button"
>
  View Info
</button>
`;
